# stunning-broccoli

./: .env  .env.docker  .gitignore  Dockerfile  README.md  SECURITY_AUDIT.md  docker-compose.yml  pyproject.toml
app/: auth.py  config.py  crud.py  database.py  dependencies.py  main.py  models.py  notifications.py  scheduler.py  schemas.py
app/routers/: families.py  init_db.py  migrations.py  tasks.py  users.py
bot/: main.py
data/: tgcalendar.db
docs/: ARCHITECTURE.md
tgcalendar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
webapp/: app.js  index.html  styles.css
