[tool.poetry]
# Информация о проекте перемещена сюда
name = "tgcalendar"
version = "0.1.0"
description = "Telegram bot with Mini App calendar for personal and family tasks"
authors = [
    { name = "TGCalendar Team", email = "you@example.com" }
]
# Явно указываем, какие папки являются пакетами
packages = [
    { include = "app" },
    { include = "bot" },
]
readme = "README.md"  # Добавлено для полноты

[tool.poetry.dependencies]
python = ">=3.11"
# Зависимости, скопированные из [project.dependencies]
aiogram = ">=3.4.1"
fastapi = ">=0.110.0"
uvicorn = ">=0.29.0"
python-dotenv = ">=1.0.1"
# pydantic[email] переформатирован для Poetry:
pydantic = { version = ">=2.0", extras = ["email"] }
pydantic-settings = ">=2.4.0"
SQLAlchemy = ">=2.0.30"
alembic = ">=1.13.1"
itsdangerous = ">=2.2.0"
httpx = ">=0.27.0"
asyncpg = "*"  # Поскольку не было указано версии
psycopg2-binary = "*" # Поскольку не было указано версии

[tool.poetry.group.dev.dependencies]
# Зависимости для dev-окружения
pytest = ">=8.2.0"

# Остальные секции сохранены
[tool.uv]
dev-dependencies = []

# Секции [project], [project.optional-dependencies] и [tool.setuptools.packages.find]
# были удалены, так как они заменяются секцией [tool.poetry].

# [build-system] сохраняется, если вы используете Poetry, хотя Poetry может 
# автоматически генерировать его, если этот файл создается через `poetry new`.
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"