[tool.poetry]
name = "tgcalendar"
version = "0.1.0"
description = "Telegram bot with Mini App calendar for personal and family tasks"
authors = [
    "TGCalendar Team <cadoiw@gmail.com>"
]
packages = [
    { include = "app" },
    { include = "bot" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
aiogram = ">=3.4.1"
fastapi = ">=0.110.0"
uvicorn = ">=0.29.0"
python-dotenv = ">=1.0.1"
pydantic = { version = ">=2.0", extras = ["email"] }
pydantic-settings = ">=2.4.0"
SQLAlchemy = ">=2.0.30"
alembic = ">=1.13.1"
itsdangerous = ">=2.2.0"
httpx = ">=0.27.0"
asyncpg = "*"
psycopg2-binary = "*"
gunicorn = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"